Redireccion de ofertas

--- a/PetShop/gestorProducto/Templates/inicio.html
+++ b/PetShop/gestorProducto/Templates/inicio.html
@@ -65,10 +65,10 @@
 		<br>
 	   	<h1> OFERTAS </h1>
 		<div class="row justify-content-center">
-			<a href="AlimentoAdultoDog.html">	
+			<a href="{%url 'adultodog'%}">	
 				<img src={% static '/img/fotos/PROMO_1.png' %} width="508" height="460" alt="">
 			</a>
-			<a href="AlimentoGatito.html">	
+			<a href="{%url 'gatitocat'%}">	
 				<img src={% static '/img/fotos/promo2.png' %} width="508" height="460" alt="">
 			</a>
 		</div>	
@@ -76,18 +76,18 @@
 		<br><br>
 	   	<h1> NUEVOS PRODUCTOS! </h1>
 		<div class="row justify-content-center">
-			<a href="AccesorioGato.html">	
+			<a href="{%url 'accesocat'%}">
 				<img src={% static '/img/fotos/promo3.png' %} width="508" height="460" alt="">
 			</a>
-			<a href="AccesorioPerro.html">	
+			<a href="{%url 'accesodog'%}">	
 				<img src={% static '/img/fotos/promo4.png' %} width="508" height="460" alt="">
 			</a>
 		</div>
 		<div class="row justify-content-center">
-			<a href="AccesorioPerro.html">	
+			<a href="{%url 'accesodog'%}">	
 				<img src={% static '/img/fotos/promo5.png' %} width="508" height="460" alt="">
 			</a>
-			<a href="AccesorioPerro.html">	
+			<a href="{%url 'accesodog'%}">	
 				<img src={% static '/img/fotos/promo6.png' %} width="508" height="460" alt="">
 			</a>
 		</div>
