--- a/PetShop/gestorProducto/Templates/index.html
+++ b/PetShop/gestorProducto/Templates/index.html
@@ -96,8 +96,11 @@
 				</form>
 			  </div>
 			</nav>
-			{% block contenido%}
 			
+			{% block contenido%}
+			{% endblock %}
+			<br>
+			{% block listado%}
 			{% endblock %}
 		</div>
 </section>
