--- a/PetShop/gestorProducto/Templates/adopcion.html
+++ b/PetShop/gestorProducto/Templates/adopcion.html
@@ -1,328 +1,70 @@
 {% extends "index.html"%}
+
 {% block contenido%}
-<section><!-- Tarjeta descripcion y galería de fotos -->
-	<div>		
-		<div class="galeria">
-			<div class="card">
-				<figure>
-					<a href="#img1"><img src="adopcion/adop1.jpg" alt="Img1"></a>
-				</figure>
-				<div class="contenido">
-					<h3>Doki, 2 Meses</h3>
-					<p>Hola me llamo doki y soy muy juguetón, busco una familia que me cuide y me quiera, soy pequeño y no causo muchos problemas.</p>
-					<button type="button" id="adopta1" class="btn btn-warning">
-						<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-						  <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-						</svg>
-					Adoptar</button><a href="#"></a>
-				</div>
-			</div>
-			
-			<div class="card">
-				<figure>
-					<a href="#img2"><img src="adopcion/adop2.jpg" alt="Img2"></a>
-				</figure>
-				<div class="contenido">
-					<h3>Thor, 2 años</h3>
-					<p>Me llamo Thor y soy un perro un poco gruñón pero cariñoso, espero encontrar una familia que me pueda alimentar y querer tal cual como soy.</p>
-					<button type="button" id="adopta2" class="btn btn-warning">
-						<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-						  <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-						</svg>
-					Adoptar</button><a href="#"></a>
-				</div>
-			</div>	
-			
-			<div class="card">
-				<figure>
-					<a href="#img3"><img src="adopcion/adop3.jpg" alt="Img3"></a>
-				</figure>
-				<div class="contenido">
-					<h3>Felix, 2 meses</h3>
-					<p>Soy un gatito muy cariñoso, busco una familia que me de amor y me cuide mimandome ya que me gustan las caricias.</p>
-					<button type="button" id="adopta3" class="btn btn-warning">
-						<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-						  <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-						</svg>
-					Adoptar</button><a href="#"></a>
-				</div>
-			</div>
-			
-			<div class="card">
-				<figure>
-					<a href="#img4"><img src="adopcion/adop4.jpg" alt="Img4"></a>
-				</figure>
-				<div class="contenido">
-					<h3>Dona, 1 meses</h3>
-					<p>Busco familia, que me quiera y ame como soy, me gusta ronronear y jugar mucho.</p>
-					<br>
-					<button type="button" id="adopta4" class="btn btn-warning">
-						<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-						  <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-						</svg>
-					Adoptar</button><a href="#"></a>
-				</div>
-			</div>
-			
-			<div class="card">
-				<figure>
-					<a href="#img5"><img src="adopcion/adop5.jpg" alt="Img5"></a>
-				</figure>
-				<div class="contenido">
-					<h3>Gitochi, 2 meses</h3>
-					<p>Soy demasiado jugueton, me gusta comer croquetas de pescado, busco una familia que me cuide y ame mucho.</p>
-					<button type="button" id="adopta5" class="btn btn-warning">
-						<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-						  <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-						</svg>
-					Adoptar</button><a href="#"></a>
-				</div>
-			</div>
-			
-			<div class="card">
-				<figure>
-					<a href="#img6"><img src="adopcion/adop6.jpg" alt="Img6"></a>
-				</figure>
-				<div class="contenido">
-					<h3>Dragon, 1 año</h3>
-					<p>Busco familia que me quiera mucho, soy travieso y muy jugueton, adoro el cariño y jugar con mi huesito.</p>
-					<br>
-					<button type="button" id="adopta6" class="btn btn-warning">
-						<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-						  <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-						</svg>
-					Adoptar</button><a href="#"></a>
-				</div>
-			</div>			
-			
-			<div class="card">
-				<figure>
-					<a href="#img7"><img src="adopcion/adop7.jpg" alt="Img7"></a>
-				</figure>
-				<div class="contenido">
-					<h3>Galleta, 2 años</h3>
-					<p>Me encantan las galletas, soy muy dormilon, me gusta seguirme la cola. Busco una familia que me de mucho amor.</p>
-					<button type="button" id="adopta7" class="btn btn-warning">
-						<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-						  <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-						</svg>
-					Adoptar</button><a href="#"></a>
-				</div>
-			</div>
-
-			<div class="card">
-				<figure>
-					<a href="#img8"><img src="adopcion/adop8.jpg" alt="Img8"></a>
-				</figure>
-				<div class="contenido">
-					<h3>Fresa, 11 meses</h3>
-					<p>Busco familia que me cuide, soy un poco tímida, necesito mucho cariño.</p>
-					<br><br>
-					<button type="button" id="adopta8" class="btn btn-warning">
-						<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-						  <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-						</svg>
-					Adoptar</button><a href="#"></a>
-				</div>
-			</div>
-			
-			<div class="card">
-				<figure>
-					<a href="#img9"><img src="adopcion/adop9.jpg" alt="Img9"></a>
-				</figure>
-				<div class="contenido">
-					<h3>Andres, 2 años</h3>
-					<p>Soy demasiado regalon, me encanta el cariño en la colita, duermo la mayoría del día.</p>
-					<br>
-					<button type="button" id="adopta9" class="btn btn-warning">
-						<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-						  <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-						</svg>
-					Adoptar</button><a href="#"></a>
-				</div>
-			</div>			
-			
-			<div class="card">
-				<figure>
-					<a href="#img10"><img src="adopcion/adop10.jpg" alt="Img10"></a>
-				</figure>
-				<div class="contenido">
-					<h3>Tigre, 9 meses</h3>
-					<p>Soy aventurero, me gusta pasear. Busco una familia que me de mucho cariño y buenas aventuras.</p>
-					<br>
-					<button type="button" id="adopta10" class="btn btn-warning">
-						<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-						  <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-						</svg>
-					Adoptar</button><a href="#"></a>
-				</div>
-			</div>			
-
-			<div class="card">
-				<figure>
-					<a href="#img11"><img src="adopcion/adop11.jpg" alt="Img11"></a>
-				</figure>
-				<div class="contenido">
-					<h3>Princesa, 1 año</h3>
-					<p>Busco familia que me quiera mucho, soy una gatita indoor, no me gusta salir, ideal para departamentos.</p>
-					<br>
-					<button type="button" id="adopta11" class="btn btn-warning">
-						<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-						  <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-						</svg>
-					Adoptar</button><a href="#"></a>
-				</div>
-			</div>
-
-			<div class="card">
-				<div>
-					<a href="#img12"><img src="adopcion/adop12.jpg" alt="Img12"></a>
-				</div>
-				<div class="contenido">
-					<h3>Gordito, 3 meses</h3>
-					<p>Bastante gloton, adoro jugar con la pelota, me gusta estar en los brazos y soy muy regalon. Busco familia que me cuide y ame mucho.</p>
-					<button type="button" id="adopta12" class="btn btn-warning">
-						<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-						  <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-						</svg>
-					Adoptar</button><a href="#"></a>
-				</div>				
-			</div>	
+{{ mensaje }}
+<form action="{% url 'adopta' %}" method="post">
+	{% csrf_token %}
+	<div class="row justify-content-center">
+		<div class="col-12 col-sm-2">
+			Id
 		</div>
-<!-- Galeria -->		
-		<div class="foto" id="img1">
-		  <h3>Doki, 2 meses</h3>
-			<div class="imagen">
-				<a href="#img12">&#60;</a>
-				<a href="#img2"><img src="adopcion/adop1.jpg" alt="Img1"></a>
-				<a href="#img2">></a>
-			</div>
-			<a class="cerrar" href="">x</a>
+		<div class="col-8 col-sm-4">	
+			<input type="text" name="txtId" class="from-control" value="{{ item.id }}" title="Ingrese solo números" pattern="[0-9]{9}">
 		</div>
-		
-		<div class="foto" id="img2">
-		  <h3>Thor, 8 años</h3>
-			<div class="imagen">
-				<a href="#img1">&#60;</a>
-				<a href="#img3"><img src="adopcion/adop2.jpg" alt="Img2"></a>
-				<a href="#img3">></a>
-			</div>
-			<a class="cerrar" href="">x</a>
+		<div class="col-1.5">	
+			<button type="sumbit" name="btnBuscar" class="btn btn-danger btn-block" >Buscar</button>
 		</div>
-		
-		<div class="foto" id="img3">
-		  <h3>Felix, 2 meses</h3>
-			<div class="imagen">
-				<a href="#img2">&#60;</a>
-				<a href="#img4"><img src="adopcion/adop3.jpg" alt="Img3"></a>
-				<a href="#img4">></a>
-			</div>
-			<a class="cerrar" href="">x</a>
-		</div>
-
-		<div class="foto" id="img4">
-		  <h3>Dona, 1 meses</h3>
-			<div class="imagen">
-				<a href="#img3">&#60;</a>
-				<a href="#img5"><img src="adopcion/adop4.jpg" alt="Img4"></a>
-				<a href="#img5">></a>
-			</div>
-			<a class="cerrar" href="">x</a>
-		</div>
-
-		<div class="foto" id="img5">
-		  <h3>Gitochi, 2 meses</h3>
-			<div class="imagen">
-				<a href="#img4">&#60;</a>
-				<a href="#img6"><img src="adopcion/adop5.jpg" alt="Img5"></a>
-				<a href="#img6">></a>
-			</div>
-			<a class="cerrar" href="">x</a>
-		</div>
-
-		<div class="foto" id="img6">
-		  <h3>Dragon, 1 año</h3>
-			<div class="imagen">
-				<a href="#img5">&#60;</a>
-				<a href="#img7"><img src="adopcion/adop6.jpg" alt="Img6"></a>
-				<a href="#img7">></a>
-			</div>
-			<a class="cerrar" href="">x</a>
-		</div>
-
-		<div class="foto" id="img7">
-		  <h3>Galleta, 2 años</h3>
-			<div class="imagen">
-				<a href="#img6">&#60;</a>
-				<a href="#img8"><img src="adopcion/adop7.jpg" alt="Img7"></a>
-				<a href="#img8">></a>
-			</div>
-			<a class="cerrar" href="">x</a>
-		</div>
-
-		<div class="foto" id="img8">
-		  <h3>Fresa, 11 meses</h3>
-			<div class="imagen">
-				<a href="#img7">&#60;</a>
-				<a href="#img9"><img src="adopcion/adop8.jpg" alt="Img8"></a>
-				<a href="#img9">></a>
-			</div>
-			<a class="cerrar" href="">x</a>
-		</div>
-
-		<div class="foto" id="img9">
-		  <h3>Punto, 2 años</h3>
-			<div class="imagen">
-				<a href="#img8">&#60;</a>
-				<a href="#img10"><img src="adopcion/adop9.jpg" alt="Img9"></a>
-				<a href="#img10">></a>
-			</div>
-			<a class="cerrar" href="">x</a>
-		</div>
-
-		<div class="foto" id="img10">
-		  <h3>Tigre, 9 meses</h3>
-			<div class="imagen">
-				<a href="#img9">&#60;</a>
-				<a href="#img11"><img src="adopcion/adop10.jpg" alt="Img10"></a>
-				<a href="#img11">></a>
-			</div>
-			<a class="cerrar" href="">x</a>
-		</div>
-
-		<div class="foto" id="img11">
-		  <h3>Princesa, 1 año</h3>
-			<div class="imagen">
-				<a href="#img10">&#60;</a>
-				<a href="#img12"><img src="adopcion/adop11.jpg" alt="Img11"></a>
-				<a href="#img12">></a>
-			</div>
-			<a class="cerrar" href="">x</a>
-		</div>
-
-		<div class="foto" id="img12">
-		  <h3>Gordito, 3 meses</h3>
-			<div class="imagen">
-				<a href="#img11">&#60;</a>
-				<a href="#img1"><img src="adopcion/adop12.jpg" alt="Img12"></a>
-				<a href="#img1">></a>
-			</div>
-			<a class="cerrar" href="">x</a>
-		</div>
-		<div class="overlay" id="overlay">
-				<div class="popup" id="popup">
-					<a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup"><i class="fas fa-times"></i></a>
-					<h3>Rellena estos datos</h3>
-					<h4>Para poder adoptar un animalito requerimos que llenes estos datos</h4>
-					<form>
-						<div class="contenedor-inputs">
-							<input title="Formato: Nombre Apellido" type="text" placeholder="Nombre" pattern="[A-Za-z]+ [A-Za-z]{2,}" required>
-							<input title="Formato: ejemplo@joju.cl" type="email" placeholder="Correo" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>					
-						</div>
-						<input type="submit" class="btn-submit" value="Adoptar">
-					</form>
-				</div>
-			</div>
 	</div>
-</section>
+	<div class="row justify-content-center">
+		<div class="col-12 col-sm-2">
+			Nombre
+		</div>
+		<div class="col-12 col-sm-6">	
+			<input type="text" name="txtNombre" class="from-control" value="{{ item.nombre }}">
+		</div>
+	</div>
+	<div class="row justify-content-center">
+		<div class="col-12 col-sm-2">
+			Descripcion
+		</div>
+		<div class="col-12 col-sm-6">	
+			<input type="text" name="txtDescripcion" class="from-control" value="{{ item.descripcion }}">
+		</div>
+	</div>	
+	<div class="row justify-content-center">
+		<div class="col-12 col-sm-2">
+			Activo
+		</div>
+		<div class="col-12 col-sm-6">	
+			<input type="checkbox" name="chkActivo" value="1" "{% if item.activo %} checked {% endif %}">
+		</div>
+	</div>		
+	<div class="row justify-content-center">
+		<div class="col-12 col-sm-2">
+			Opciones
+		</div>
+		<div class="col-12 col-sm-6">	
+			<button type="sumbit" name="btnGrabar" class="btn btn-success" >Guardar</button>
+			<button type="sumbit" name="btnListar" class="btn btn-primary" >Listar</button>
+{% if item.id > 0 %}			
+			<button type="sumbit" name="btnEliminar" class="btn btn-danger float-right" >Eliminar</button>
+{% endif %}
+		</div>
+	</div>
+</form>
+{% endblock %}
+
+{% block listado %}
+{% for fila in lista %}
+<div class="galeria">
+	<div class="card">
+		<div class ="row justify-content-center">
+			<div>	
+				<div class="table-responsive">
+							<h1>{{ fila.nombre }}</h1>
+							<label>{{ fila.descripcion }}</label>
+							<p>{{ fila.activo }}</p>
+{% endfor %}
+
+			</div>
 {% endblock %}
