--- a/PetShop/gestorProducto/Templates/adopcion.html
+++ b/PetShop/gestorProducto/Templates/adopcion.html
@@ -9,7 +9,7 @@
 			Id
 		</div>
 		<div class="col-8 col-sm-4">	
-			<input type="text" name="txtId" class="from-control" value="{{ item.id }}" title="Ingrese solo números" pattern="[0-9]{9}">
+			<input type="text" name="txtId" class="from-control" value="{{ item.id }}" title="Ingrese solo números" pattern="[0-9]">
 		</div>
 		<div class="col-1.5">	
 			<button type="sumbit" name="btnBuscar" class="btn btn-danger btn-block" >Buscar</button>
