--- a/PetShop/gestorProducto/Templates/accesoriocat.html
+++ b/PetShop/gestorProducto/Templates/accesoriocat.html
@@ -1,180 +1,47 @@
 {% extends "index.html"%}
+
 {% block contenido%}
-<section><!-- Productos -->	
-		<br>
-		<div class="row justify-content-center" id="descripcion">
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete1.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Pelotas con punto</h5>
-				<h4 class="row justify-content-center">$1.990</h4>
-				<button type="button" id="producto1" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Efecto estimulante y promotor del instinto felino</p>
-			</div>
+{{ mensaje }}
+<form action="{% url 'accesocat' %}" method="post">
+	{% csrf_token %}
+		<div>	
+			<input type="hidden" name="txtId" class="from-control" value="{{ item.id }}">
+		</div>
 
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete2.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Pelotas con punto</h5>
-				<h4 class="row justify-content-center">$2.000</h4>
-				<button type="button" id="producto2" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Ayuda al cuidado de las uñas, 10cm con cascabel</p>
-			</div>
+		<div>	
+			<input type="hidden" name="txtNombre" class="from-control" value="{{ item.nombre }}">
+		</div>
+
+		<div>	
+			<input type="hidden" name="txtPrecio" class="from-control" value="{{ item.precioVenta }}">
+		</div>
+
+		<div>	
+			<input type="hidden" name="txtDescripcion" class="from-control" value="{{ item.descripcion }}">
+		</div>
 			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">	
-				<img src="acat/Juguete3.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Sisal, 2 pelotas c/cuerda</h5>
-				<h4 class="row justify-content-center">$1.890</h4>
-				<button type="button" id="producto3" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Ayuda al cuidado de las uñas, 4.5cm con cascabel</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">	
-				<img src="acat/Juguete4.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Poliester, raton</h5>
-				<h4 class="row justify-content-center">$3.890</h4>
-				<button type="button" id="producto4" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Efecto estimulante, promotor del instinto felino, 10cm</p>
-			</div>
+		<div>	
+			<button type="sumbit" name="btnListar" class="btn btn-light">
+					<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-bootstrap-reboot" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+		  <path fill-rule="evenodd" d="M1.161 8a6.84 6.84 0 1 0 6.842-6.84.58.58 0 0 1 0-1.16 8 8 0 1 1-6.556 3.412l-.663-.577a.58.58 0 0 1 .227-.997l2.52-.69a.58.58 0 0 1 .728.633l-.332 2.592a.58.58 0 0 1-.956.364l-.643-.56A6.812 6.812 0 0 0 1.16 8zm5.48-.079V5.277h1.57c.881 0 1.416.499 1.416 1.32 0 .84-.504 1.324-1.386 1.324h-1.6zm0 3.75V8.843h1.57l1.498 2.828h1.314L9.377 8.665c.897-.3 1.427-1.106 1.427-2.1 0-1.37-.943-2.246-2.456-2.246H5.5v7.352h1.141z"/>
+		</svg></button>
+		</div>
+</form>
+{% endblock %}
 
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete5.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Nature cat leather friends</h5>
-				<h4 class="row justify-content-center">$4.500</h4>
-				<button type="button" id="producto5" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Juguete natural</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete6.jpeg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">furry ball fluffer</h5>
-				<h4 class="row justify-content-center">$4.350</h4>
-				<button type="button" id="producto6" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Contiene hierba gatera al interior</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete7.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">wild nature cat cork fun</h5>
-				<h4 class="row justify-content-center">$5.390</h4>
-				<button type="button" id="producto7" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Juguete natural</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete8.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">kong with catnip</h5>
-				<h4 class="row justify-content-center">$5.500</h4>
-				<button type="button" id="producto8" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Felpa suave, contiene hierba gatera fresca</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete9.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">modern cat feather snake</h5>
-				<h4 class="row justify-content-center">$6.490</h4>
-				<button type="button" id="producto9" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Juguete multi sensorial</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete10.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">varita gato, unicornio</h5>
-				<h4 class="row justify-content-center">$5.520</h4>
-				<button type="button" id="producto10" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Unicornio de felpa, 45cm</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete11.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">furry ball long fluff</h5>
-				<h4 class="row justify-content-center">$5.520</h4>
-				<button type="button" id="producto11" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Varita fluff colorido y suave</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete12.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">poste rascador c/base</h5>
-				<h4 class="row justify-content-center">$16.990</h4>
-				<button type="button" id="producto12" class="btn btn-warning">Agregar al Carrito</button>
-				<p>42cms, color rojo vino</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete13.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">torre rascadora</h5>
-				<h4 class="row justify-content-center">$20.990</h4>
-				<button type="button" id="producto13" class="btn btn-warning">Agregar al Carrito</button>
-				<p>50cms, color gris</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete14.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">rascador</h5>
-				<h4 class="row justify-content-center">$9.500</h4>
-				<button type="button" id="producto14" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Arco rascador con base para gatos</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete15.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Conejo c/pelota</h5>
-				<h4 class="row justify-content-center">$7.500</h4>
-				<button type="button" id="producto15" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Contiene cascabel, 20cm</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete16.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Camita almeja</h5>
-				<h4 class="row justify-content-center">$10.500</h4>
-				<button type="button" id="producto16" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Material plush, relleno algodon, extra suave</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete17.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">camita pastel</h5>
-				<h4 class="row justify-content-center">$12.360</h4>
-				<button type="button" id="producto17" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Material esponja, extra suave, estandar</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete18.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">camita osito</h5>
-				<h4 class="row justify-content-center">$19.200</h4>
-				<button type="button" id="producto18" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Camita cerrada en forma de osito, material felpa</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete19.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">camita rosa</h5>
-				<h4 class="row justify-content-center">$10.200</h4>
-				<button type="button" id="producto19" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Camita cerrada de plastico, con cojin</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/Juguete20.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Mochila</h5>
-				<h4 class="row justify-content-center">$25.900</h4>
-				<button type="button" id="producto20" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Mochila para llevar a tu gatito donde quieras</p>
-			</div>
-			<div class="overlay" id="overlay">
-				<div class="popup" id="popup">
-					<a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup"><i class="fas fa-times"></i></a>
-					<h3>Tu articulo ha sido añadido al carrito correctamente.</h3>
-					<h4>El producto correspondiente al área "Accesorios de gatos y más" ha sido agregado.</h4>
-					<form>
-						<div class="contenedor-inputs">			
-						</div>
-						<button type="submit" class="btn-submit">Seguir comprando</button>
-					</form>
-				</div>
+{% block listado %}
+{% for fila in lista %}
+<div class="prod">
+	<div class ="row justify-content-center">
+		<div>	
+			<div class="table-responsive">
+							<h4>{{ fila.nombre }}</h4>
+							<p>{{ fila.precioVenta }}</p>
+							<button id="producto1" class="btn btn-warning">Agregar al Carrito</button>
+							<p>{{ fila.descripcion }}</p>
+{% endfor %}
 			</div>
 		</div>
-		<br>
-</section>
+	</div>
+</div>
 {% endblock %}
