--- a/PetShop/gestorProducto/Templates/accesoriodog.html
+++ b/PetShop/gestorProducto/Templates/accesoriodog.html
@@ -1,192 +1,47 @@
 {% extends "index.html"%}
+
 {% block contenido%}
-<section><!-- Productos -->	
-		<br>
-		<!-- Juguetes -->
-		<div class="row justify-content-center" id="descripcion">
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Juguetes/Llama.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Juguete Felpa Alpaca</h5>
-				<h4 class="row justify-content-center">$2.990</h4>
-				<button type="button" id="producto1" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Juguete de felpa, 31cm</p>
-			</div>		
-	
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Juguetes/Pantufla.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Doggies Pantufla</h5>
-				<h4 class="row justify-content-center">$9.990</h4>
-				<button type="button" id="producto2" class="btn btn-warning">Agregar al Carrito</button>
-				<p> Pantufla para que muerda tu perro</p>
-			</div>
-		
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Juguetes/HuesoAzul.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Planet dog hueso azul</h5>
-				<h4 class="row justify-content-center">$7.990</h4>
-				<button type="button" id="producto3" class="btn btn-warning">Agregar al Carrito</button>
-				<p>El Hueso azul de Planet Dog es un juguete fabricado con
-				su material insigne Orbee- Tuff  un material duradero</p>
-			</div>		
-		
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Juguetes/Cerdito.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">JUGUETE LATEX CERDO, SONIDO ORIGINAL</h5>
-				<h4 class="row justify-content-center">$5.990</h4>
-				<button type="button" id="producto4" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Cerdito de Latex con sonido. 11cm</p>
-			</div>			
-		
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Juguetes/Araña.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">MAMMOTH SNAKEBITER SPIDER</h5>
-				<h4 class="row justify-content-center">$6.450</h4>
-				<button type="button" id="producto5" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Juguete de cuerda de 11 pulgadas, mediano
-				Asegure horas de juego para su perro con este Mammoth Snakebiter Dog Rope.</p>
-			</div>		
+{{ mensaje }}
+<form action="{% url 'accesodog' %}" method="post">
+	{% csrf_token %}
+		<div>	
+			<input type="hidden" name="txtId" class="from-control" value="{{ item.id }}">
+		</div>
 
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Juguetes/Pelota.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">MAMMOTH TENNIS BALL</h5>
-				<h4 class="row justify-content-center">$2.450</h4>
-				<button type="button" id="producto6" class="btn btn-warning">Agregar al Carrito</button>
-				<p>3 Unidades de diferentes tamaños, 5cm 10cm y 15cm!!</p>
-			</div>
+		<div>	
+			<input type="hidden" name="txtNombre" class="from-control" value="{{ item.nombre }}">
+		</div>
 
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Juguetes/Pato.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Pato latex</h5>
-				<h4 class="row justify-content-center">$2.500</h4>
-				<button type="button" id="producto7" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Juguete con sonido para perros pequeños, 14cm</p>
-			</div>
+		<div>	
+			<input type="hidden" name="txtPrecio" class="from-control" value="{{ item.precioVenta }}">
+		</div>
 
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Juguetes/Saltador.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Saltador de goma</h5>
-				<h4 class="row justify-content-center">$4.500</h4>
-				<button type="button" id="producto8" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Juguete saltador de caucho natural con orificio 
-				en el centro para introducir paté o snack. Diferentes colores</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Juguetes/Cuerda.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">DOGIT cuerda anudada sabor menta</h5>
-				<h4 class="row justify-content-center">$5.500</h4>
-				<button type="button" id="producto9" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Proporcionarán horas de diversión y ejercicio a tu perro. 
-				También contribuyen en su higiene dental.</p>
-			</div>		
+		<div>	
+			<input type="hidden" name="txtDescripcion" class="from-control" value="{{ item.descripcion }}">
+		</div>
 			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Juguetes/Chupete.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">LITTLE BUDDY CHUPETE</h5>
-				<h4 class="row justify-content-center">$3.500</h4>
-				<button type="button" id="producto10" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Juguete para cachorro, VERDE SMALL / LARGE.</p>
-			</div>		
+		<div>	
+			<button type="sumbit" name="btnListar" class="btn btn-light">
+					<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-bootstrap-reboot" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+		  <path fill-rule="evenodd" d="M1.161 8a6.84 6.84 0 1 0 6.842-6.84.58.58 0 0 1 0-1.16 8 8 0 1 1-6.556 3.412l-.663-.577a.58.58 0 0 1 .227-.997l2.52-.69a.58.58 0 0 1 .728.633l-.332 2.592a.58.58 0 0 1-.956.364l-.643-.56A6.812 6.812 0 0 0 1.16 8zm5.48-.079V5.277h1.57c.881 0 1.416.499 1.416 1.32 0 .84-.504 1.324-1.386 1.324h-1.6zm0 3.75V8.843h1.57l1.498 2.828h1.314L9.377 8.665c.897-.3 1.427-1.106 1.427-2.1 0-1.37-.943-2.246-2.456-2.246H5.5v7.352h1.141z"/>
+		</svg></button>
+		</div>
+</form>
+{% endblock %}
 
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Juguetes/Hueso.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">FP GOODB NAT BAG BEEF</h5>
-				<h4 class="row justify-content-center">$3.990</h4>
-				<button type="button" id="producto11" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Jueguete de masticación hecho con componentes naturales no tóxicos y biodegradables
-				Hueso Medium, 70 gr, Sabor Carne</p>
+{% block listado %}
+{% for fila in lista %}
+<div class="prod">
+	<div class ="row justify-content-center">
+		<div>	
+			<div class="table-responsive">
+							<h4>{{ fila.nombre }}</h4>
+							<p>{{ fila.precioVenta }}</p>
+							<button id="producto1" class="btn btn-warning">Agregar al Carrito</button>
+							<p>{{ fila.descripcion }}</p>
+{% endfor %}
 			</div>
-		
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Juguetes/DentaFun.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">PELOTA DENTA FUN</h5>
-				<h4 class="row justify-content-center">$4.990</h4>
-				<button type="button" id="producto12" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Realizado en caucho blando. Las muescas proporcionan 
-				una higiene dental adecuada para su perro</p>
-			</div>
-		
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Ropa/Ropa2.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Poleron Peludo</h5>
-				<h4 class="row justify-content-center">$9.960</h4>
-				<button type="button" id="producto13" class="btn btn-warning">Agregar al Carrito</button>
-				<p> El material no produce alergias, Talla M/L</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Juguetes/Frambueza.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">PLANET DOG FRAMBUEZA</h5>
-				<h4 class="row justify-content-center">$5.990</h4>
-				<button type="button" id="producto14" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Juguete perfecto para los perros más pequeños. esta Frambuenza es
-				un juguete fabricado con el material insigne de Planet Dog,  Orbee- Tuff  un material duradero. 4.75cm</p>
-			</div>
-	<!-- Camas -->
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Camas/Cama1.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">FP cojin relax</h5>
-				<h4 class="row justify-content-center">$14.990</h4>
-				<button type="button" id="producto15" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Relax es un cojín con forma ovalada para gatos o perros. Está disponible
-				en tallas distintas para animales de todos los tamaños, y en variedad de diseños,
-				y cabe fácilmente en las camas Siesta Deluxe. </p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Camas/Cama2.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">FP cojin relax rombu</h5>
-				<h4 class="row justify-content-center">$7.990</h4>
-				<button type="button" id="producto16" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Relax es un cojín con forma ovalada para gatos o perros. 
-				Y cabe fácilmente en las camas Siesta Deluxe. </p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Ropa/Ropa1.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Conjunto invierno</h5>
-				<h4 class="row justify-content-center">$10.960</h4>
-				<button type="button" id="producto17" class="btn btn-warning">Agregar al Carrito</button>
-				<p> Zapatitos con un lindo suerter rojo, para perros pequeños</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Camas/Cama4.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">cojin cama</h5>
-				<h4 class="row justify-content-center">$18.960</h4>
-				<button type="button" id="producto18" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Dimensiones: 55cm x 45cm x 6cm</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Camas/Cama5.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">FP cama acolchada, dandy</h5>
-				<h4 class="row justify-content-center">$36.960</h4>
-				<button type="button" id="producto19" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Cama de algodón y piel sintética para gatos y perros. Diferentes tamaños.</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/Camas/Cama6.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">DREAMWELL CAMA DONUT</h5>
-				<h4 class="row justify-content-center">$24.960</h4>
-				<button type="button" id="producto20" class="btn btn-warning">Agregar al Carrito</button>
-				<p>REDONDA - 50 CM DIAMETRO</p>
-			</div>
-			
-			<div class="overlay" id="overlay">
-				<div class="popup" id="popup">
-					<a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup"><i class="fas fa-times"></i></a>
-					<h3>Tu Articulo ha sido añadido al carrito correctamente.</h3>
-					<h4>El producto correspondiente al área "Accesorios de perros y más" ha sido agregado.</h4>
-					<form>
-						<div class="contenedor-inputs">			
-						</div>
-						<button type="submit" class="btn-submit">Seguir comprando</button>
-					</form>
-				</div>
-			</div>
-		</div>		
-		<br>
-</section>
+		</div>
+	</div>
+</div>
 {% endblock %}
