--- a/PetShop/gestorProducto/Templates/alimentoadultocat.html
+++ b/PetShop/gestorProducto/Templates/alimentoadultocat.html
@@ -1,201 +1,47 @@
 {% extends "index.html"%}
+
 {% block contenido%}
-<section><!-- Productos -->	
-		<br>
-		<div class="row justify-content-center" id="descripcion">
-			<!-- Ofertas -->	
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Wiskas1.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Whiskas de pollo</h5>
-				<h4 style="color:orange; text-decoration:line-through;" class="row justify-content-center">$3.000</h4>
-				<p id="oferta" class="row justify-content-center">OFERTA $2.700</p>
-				<button id="producto1" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Alimento de 1.5kg seco, sabor a pollo y leche WHISKAS</p>			
-			</div>
+{{ mensaje }}
+<form action="{% url 'adultocat' %}" method="post">
+	{% csrf_token %}
+		<div>	
+			<input type="hidden" name="txtId" class="from-control" value="{{ item.id }}">
+		</div>
+
+		<div>	
+			<input type="hidden" name="txtNombre" class="from-control" value="{{ item.nombre }}">
+		</div>
+
+		<div>	
+			<input type="hidden" name="txtPrecio" class="from-control" value="{{ item.precioVenta }}">
+		</div>
+
+		<div>	
+			<input type="hidden" name="txtDescripcion" class="from-control" value="{{ item.descripcion }}">
+		</div>
 			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Wiskas2.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">whiskas de salmon</h5>
-				<h4 style="color:orange; text-decoration:line-through;" class="row justify-content-center">$3.300</h4>
-				<p id="oferta2" class="row justify-content-center">OFERTA $3.000</p>
-				<button id="producto2" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Alimento de 1.5kg seco, sabor a salmon WHISKAS</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Wiskas3.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">whiskas de carne</h5>
-				<h4 style="color:orange; text-decoration:line-through;" class="row justify-content-center">$3.000</h4>
-				<p id="oferta3" class="row justify-content-center">OFERTA $2.700</p>
-				<button id="producto3" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Alimento de 1.5kg seco, sabor a carne WHISKAS</p>
-			</div>
-			<!-- Fin Ofertas -->
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Comida1.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Cat chow Pescado</h5>
-				<h4 class="row justify-content-center">$3.990</h4>
-				<button id="producto4" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Purina Cat Chow ADULTOS DELICIAS DE PESCADO
-				 ofrece los nutrientes que tu gato necesita para mantenerse bello y saludable. 
-				</p>
-			</div>
+		<div>	
+			<button type="sumbit" name="btnListar" class="btn btn-light">
+					<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-bootstrap-reboot" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+		  <path fill-rule="evenodd" d="M1.161 8a6.84 6.84 0 1 0 6.842-6.84.58.58 0 0 1 0-1.16 8 8 0 1 1-6.556 3.412l-.663-.577a.58.58 0 0 1 .227-.997l2.52-.69a.58.58 0 0 1 .728.633l-.332 2.592a.58.58 0 0 1-.956.364l-.643-.56A6.812 6.812 0 0 0 1.16 8zm5.48-.079V5.277h1.57c.881 0 1.416.499 1.416 1.32 0 .84-.504 1.324-1.386 1.324h-1.6zm0 3.75V8.843h1.57l1.498 2.828h1.314L9.377 8.665c.897-.3 1.427-1.106 1.427-2.1 0-1.37-.943-2.246-2.456-2.246H5.5v7.352h1.141z"/>
+		</svg></button>
+		</div>
+</form>
+{% endblock %}
 
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Comida2.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Cat chow Carne</h5>
-				<h4 class="row justify-content-center">$3.990</h4>
-				<button id="producto5" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Purina Cat Chow ADULTOS DELICIAS SABOR CARNE
-				 ofrece los nutrientes que tu gato necesita para mantenerse bello y saludable. 
-				</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Comida3.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Cat chow Hogareños</h5>
-				<h4 class="row justify-content-center">$3.990</h4>
-				<button id="producto6" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Purina Cat Chow HOGAREÑOS CON DEFENSE PLUS 
-				ofrece los nutrientes que tu gato necesita para mantenerse saludable. 
-				</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Comida4.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Cat chow Delimix</h5>
-				<h4 class="row justify-content-center">$4.200</h4>
-				<button id="producto7" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Purina Cat Chow DELIMIX CON DEFENSE PLUS 
-				ofrece los nutrientes que tu gato necesita para mantenerse saludable. 
-				</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Comida5.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Cat chow Peso Saludable</h5>
-				<h4 class="row justify-content-center">$4.400</h4>
-				<button id="producto8" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Purina Cat Chow PESO SALUDABLE 
-				Es reducido en calorías para ayudar a controlar su peso.
-				</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Comida6.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Cat chow Esterilizado</h5>
-				<h4 class="row justify-content-center">$5.000</h4>
-				<button id="producto9" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Purina Cat Chow ESTERILIZADOS. Posee altos niveles de proteína 
-				que ayudan a mantener una masa corporal ideal.
-				</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Comida7.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Pro Plan Cat adult</h5>
-				<h4 class="row justify-content-center">$6.990</h4>
-				<button id="producto10" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Es una tecnología exclusiva, elaborado con carne fresca de pollo.</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Comida8.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Pro Plan Cat STERILIZED OPTIRENAL</h5>
-				<h4 class="row justify-content-center">$7.100</h4>
-				<button id="producto11" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Mezcla de nutrientes, antioxidantes, aminoácidos y omega 3 y 6,
-				que ayudan a mantener un funcionamiento renal óptimo.</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Comida9.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Pro Plan Cat Urinary</h5>
-				<h4 class="row justify-content-center">$7.100</h4>
-				<button id="producto12" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Ayuda a prevenir la formación de cristales de estruvita y de oxalato,
-				manteniendo y protegiendo la salud del tracto urinario inferior.</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Comida10.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Equilibrio Gato Adulto</h5>
-				<h4 class="row justify-content-center">$8.900</h4>
-				<button id="producto13" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Gatos Adultos Hairball es un alimento de calidad Súper Premium.</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Comida11.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Equilibrio Gato Adulto Castrado</h5>
-				<h4 class="row justify-content-center">$8.900</h4>
-				<button id="producto14" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Gatos Castrados es un alimento para gatos adultos castrados (de 1 a 7 años).</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Comida12.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Equilibrio Gato Adulto salmon</h5>
-				<h4 class="row justify-content-center">$9.900</h4>
-				<button id="producto15" class="btn btn-warning">Agregar al Carrito</button>
-				<p>1.5KG, Altamente palatable con un sabor a salmón que agrada al paladar de los gatos</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Comida13.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Royal Canin FBN Persian</h5>
-				<h4 class="row justify-content-center">$11.500</h4>
-				<button id="producto16" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Persian 30 es un alimento para gatos de raza Persa mayores de 12 meses.
-				Elaborado con su exclusiva croqueta Almond 11</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Comida14.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Royal Canin FBN Siamese</h5>
-				<h4 class="row justify-content-center">$11.500</h4>
-				<button id="producto17" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Alimento para gatos Siameses mayores de 12 meses. 
-				Formulado especialmente con la croqueta Sapphire 12 </p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Comidalucky.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">brit carelucky</h5>
-				<h4 class="row justify-content-center">$13.100</h4>
-				<button id="producto18" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Fórmula hipoalergénica a base de pollo y arroz para gatos adultos. </p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Comida15.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">brit carelucky sterilised</h5>
-				<h4 class="row justify-content-center">$13.100</h4>
-				<button id="producto19" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Fórmula hipoalergénica a base de pollo y arroz para gatos esterilizados.  </p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaAdulto/Comida16.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">brit carelucky monty</h5>
-				<h4 class="row justify-content-center">$13.100</h4>
-				<button id="producto20" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Fórmula hipoalergénica a base de pollo y arroz para gatos adultos de interior. </p>
-			</div>		
-			<div class="overlay" id="overlay">
-				<div class="popup" id="popup">
-					<a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup"><i class="fas fa-times"></i></a>
-					<h3>Tu Articulo ha sido añadido al carrito correctamente.</h3>
-					<h4>El producto correspondiente al área "Comida de gatos adultos" ha sido agregado.</h4>
-					<form>
-						<div class="contenedor-inputs">			
-						</div>
-						<button type="submit" class="btn-submit">Seguir comprando</button>
-					</form>
-				</div>
+{% block listado %}
+{% for fila in lista %}
+<div class="prod">
+	<div class ="row justify-content-center">
+		<div>	
+			<div class="table-responsive">
+							<h4>{{ fila.nombre }}</h4>
+							<p>{{ fila.precioVenta }}</p>
+							<button id="producto1" class="btn btn-warning">Agregar al Carrito</button>
+							<p>{{ fila.descripcion }}</p>
+{% endfor %}
 			</div>
 		</div>
-		<br>
-</section>	
+	</div>
+</div>
 {% endblock %}
