--- a/PetShop/gestorProducto/Templates/alimentocachorro.html
+++ b/PetShop/gestorProducto/Templates/alimentocachorro.html
@@ -1,215 +1,47 @@
 {% extends "index.html"%}
+
 {% block contenido%}
-<section><!-- Productos -->	
-		<br>
-		<div class="row justify-content-center" id="descripcion">
-			<!-- Ofertas -->	
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/DogChow.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Dog Chow trozos jugosos</h5>
-				<p id="antes" class="row justify-content-center">$950</p>
-				<p id="oferta" class="row justify-content-center">OFERTA $800</p>
-				<button type="button" id="producto1" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Purina DOG CHOW VIDA SANA, Trozos jugosos de pollo Cachorros 100G</p>
-			</div>
-	
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/DogChow2.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Dog Chow Razas pequeñas</h5>
-				<p id="antes2" class="row justify-content-center">$800</p>
-				<p id="oferta2" class="row justify-content-center">OFERTA $680</p>
-				<button type="button" id="producto2" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Purina DOG CHOW RAZAS PEQUEÑAS TROZOS JUGOSOS DE POLLO Y MANZANA 
-				es un alimento húmedo indicado para cachorros de raza pequeña. 100G</p>
-			</div>	
+{{ mensaje }}
+<form action="{% url 'cachorrodog' %}" method="post">
+	{% csrf_token %}
+		<div>	
+			<input type="hidden" name="txtId" class="from-control" value="{{ item.id }}">
+		</div>
 
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/DogChow1.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Dog Chow Pavo</h5>
-				<p id="antes3" class="row justify-content-center">$850</p>
-				<p id="oferta3" class="row justify-content-center">OFERTA $720</p>
-				<button type="button" id="producto3" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Purina DOG CHOW VIDA SANA, sabor carne de Pavo, 100G</p>
-			</div>
-			<!-- Fin Ofertas -->
+		<div>	
+			<input type="hidden" name="txtNombre" class="from-control" value="{{ item.nombre }}">
+		</div>
 
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/MasterDog.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">MasterDog Carne en Salsa</h5>
-				<h4 class="row justify-content-center">$700</h4>
-				<button type="button" id="producto4" class="btn btn-warning">Agregar al Carrito</button>
-				<p> Alimento completo y balanceado recomendado para cachorros de todas las razas. 100G
-				</p>
-			</div>
+		<div>	
+			<input type="hidden" name="txtPrecio" class="from-control" value="{{ item.precioVenta }}">
+		</div>
+
+		<div>	
+			<input type="hidden" name="txtDescripcion" class="from-control" value="{{ item.descripcion }}">
+		</div>
 			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/Pedigree.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Pedigree Pollo en Salsa</h5>
-				<h4 class="row justify-content-center">$500</h4>
-				<button type="button" id="producto5" class="btn btn-warning">Agregar al Carrito</button>
-				<p> Alimento húmedo para cachorro en sobre PEDIGREE
-				Sabor Pollo en Salsa. 85G
-				</p>
-			</div>			
+		<div>	
+			<button type="sumbit" name="btnListar" class="btn btn-light">
+					<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-bootstrap-reboot" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+		  <path fill-rule="evenodd" d="M1.161 8a6.84 6.84 0 1 0 6.842-6.84.58.58 0 0 1 0-1.16 8 8 0 1 1-6.556 3.412l-.663-.577a.58.58 0 0 1 .227-.997l2.52-.69a.58.58 0 0 1 .728.633l-.332 2.592a.58.58 0 0 1-.956.364l-.643-.56A6.812 6.812 0 0 0 1.16 8zm5.48-.079V5.277h1.57c.881 0 1.416.499 1.416 1.32 0 .84-.504 1.324-1.386 1.324h-1.6zm0 3.75V8.843h1.57l1.498 2.828h1.314L9.377 8.665c.897-.3 1.427-1.106 1.427-2.1 0-1.37-.943-2.246-2.456-2.246H5.5v7.352h1.141z"/>
+		</svg></button>
+		</div>
+</form>
+{% endblock %}
 
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/Pedigree1.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Pedigree Carne en Salsa</h5>
-				<h4 class="row justify-content-center">$500</h4>
-				<button type="button" id="producto6" class="btn btn-warning">Agregar al Carrito</button>
-				<p> Alimento húmedo para cachorro en sobre PEDIGREE
-				Sabor Carne en Salsa. 85G
-				</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/Comida1.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">PRO PLAN PUPPY COMPLETE</h5>
-				<h4 class="row justify-content-center">$5.900</h4>
-				<button type="button" id="producto7" class="btn btn-warning">Agregar al Carrito</button>
-				<p> Elimina la “brecha inmunológica” y provee nutrición 
-				completa que ayuda a los cachorros a crecer fuertes y sanos. 1KG
-				</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/Comida2.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">PRO PLAN PUPPY SMALL BREED</h5>
-				<h4 class="row justify-content-center">$5.900</h4>
-				<button type="button" id="producto8" class="btn btn-warning">Agregar al Carrito</button>
-				<p> Elimina la “brecha inmunológica” y provee nutrición 
-				completa que ayuda a los cachorros a crecer fuertes y sanos. 1KG
-				</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/Comida3.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">NUTRA NUGGETS PUPPY SMALL BREED</h5>
-				<h4 class="row justify-content-center">$13.900</h4>
-				<button type="button" id="producto9" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Alimento para cachorros de raza pequeña. 3KG
-				</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/Comida4.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">NUTRA GOLD PUPPY MICRO BITE</h5>
-				<h4 class="row justify-content-center">$15.200</h4>
-				<button type="button" id="producto10" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Formula Holistica Mini Croquetas para Cachorros. Alimento completo para perros, 
-				Hasta 1 año y 12Kg completamente desarrollado. 3KG
-				</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/Comida5.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">BRIT CARE PUPPY LAMB & RICE</h5>
-				<h4 class="row justify-content-center">$45.000</h4>
-				<button type="button" id="producto11" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Fórmula hipoalergénica para cachorros de todas las razas 
-				(3 semanas a 12 meses). Ideal también para perras gestantes. 12KG
-				</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/Comida6.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">BRIT CARE PUPPY SALMON</h5>
-				<h4 class="row justify-content-center">$15.200</h4>
-				<button type="button" id="producto12" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Fórmula libre de granos para cachorros
-				de todas las razas (4 semanas a 12 meses). Ideal también para perras gestantes. 3KG
-				</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/Comida7.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">ROYAL CANIN BHN BULLDOG FRANCES JUNIOR</h5>
-				<h4 class="row justify-content-center">$19.200</h4>
-				<button type="button" id="producto13" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Alimento completo para perros - Especialmente para cachorros 
-				de Bulldog Francés - Hasta 12 meses de edad 3KG
-				</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/Comida8.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">ROYAL CANIN BHN POODLE JUNIOR</h5>
-				<h4 class="row justify-content-center">$19.200</h4>
-				<button type="button" id="producto14" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Esta fórmula contiene nutrientes que ayudan a
-				mantener la salud del abrigo lanudo del Caniche. 3KG
-				</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/Comida9.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">NUTRA NUGGETS PUPPY MD/LG BREED</h5>
-				<h4 class="row justify-content-center">$40.200</h4>
-				<button type="button" id="producto15" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Es un alimento balanceado y altamente digerible que provee 
-				niveles óptimos de energía, proteína y otros nutrientes. 15KG
-				</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/Comida10.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">BRIT CARE JUNIOR LARGE BREED SALMON</h5>
-				<h4 class="row justify-content-center">$41.250</h4>
-				<button type="button" id="producto16" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Fórmula libre de granos para cachorros y perros jóvenes de
-				3 meses a 2 años de razas grandes y gigantes. (más de 25 kg.) 12KG
-				</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/Comida11.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Royal Canin Mini Junior</h5>
-				<h4 class="row justify-content-center">$42.200</h4>
-				<button type="button" id="producto17" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Cachorros de razas pequeñas (de 1 a 10 kg de peso adulto) - Hasta los 10 meses de edad. 25KG
-				</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/Comida12.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Eukanuba Puppy Medium Breed</h5>
-				<h4 class="row justify-content-center">$42.800</h4>
-				<button type="button" id="producto18" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Formulado para cachorros de raza mediana 25KG
-				</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/Comida13.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Eukanuba Puppy Small Breed</h5>
-				<h4 class="row justify-content-center">$42.800</h4>
-				<button type="button" id="producto19" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Formulado para cachorros de raza pequeña 25KG
-				</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="adog/ComidaCachorro/Comida14.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Hills Puppy Original</h5>
-				<h4 class="row justify-content-center">$43.600</h4>
-				<button type="button" id="producto20" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Proporciona una nutrición equilibrada y fácil de digerir para los cachorros en crecimiento. 25KG
-				</p>
-			</div>
-			
-			<div class="overlay" id="overlay">
-				<div class="popup" id="popup">
-					<a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup"><i class="fas fa-times"></i></a>
-					<h3>Tu Articulo ha sido añadido al carrito correctamente.</h3>
-					<h4>El producto correspondiente al área "Comida de cachorros" ha sido agregado.</h4>
-					<form>
-						<div class="contenedor-inputs">			
-						</div>
-						<input type="submit" class="btn-submit" value="Seguir comprando">
-					</form>
-				</div>
+{% block listado %}
+{% for fila in lista %}
+<div class="prod">
+	<div class ="row justify-content-center">
+		<div>	
+			<div class="table-responsive">
+							<h4>{{ fila.nombre }}</h4>
+							<p>{{ fila.precioVenta }}</p>
+							<button id="producto1" class="btn btn-warning">Agregar al Carrito</button>
+							<p>{{ fila.descripcion }}</p>
+{% endfor %}
 			</div>
 		</div>
-		<br>
-</section>
+	</div>
+</div>
 {% endblock %}
