--- a/PetShop/gestorProducto/Templates/alimentogatito.html
+++ b/PetShop/gestorProducto/Templates/alimentogatito.html
@@ -1,209 +1,47 @@
 {% extends "index.html"%}
+
 {% block contenido%}
-<section><!-- Productos -->	
-		<br>
-		<div class="row justify-content-center" id="descripcion">
-			<!-- Ofertas -->	
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Wiskas1.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Wiskas de salmon</h5>
-				<h4 style="color:orange; text-decoration:line-through;" class="row justify-content-center">$3.000</h4>
-				<p style="font-size:27px; color:red;" class="row justify-content-center">OFERTA $2.700</p>
-				<button type="button" id="producto1" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Alimento de 1.5kg seco, sabor a salmon y leche WHISKAS</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Wiskas2.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">wiskas de carne</h5>
-				<h4 style="color:orange; text-decoration:line-through;" class="row justify-content-center">$3.300 </h4>
-				<p style="font-size:27px; color:red;" class="row justify-content-center">OFERTA $3.000</p>
-				<button type="button" id="producto2" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Alimento de 1.5kg seco, sabor a carne WHISKAS</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Wiskas3.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">wiskas de leche</h5>
-				<h4 style="color:orange; text-decoration:line-through;" class="row justify-content-center">$3.000</h4>
-				<p style="font-size:27px; color:red;" class="row justify-content-center">OFERTA $2.700</p>
-				<button type="button" id="producto3" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Alimento de 1.5kg seco, sabor a leche y carne WHISKAS</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/lechewiskas.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">wiskas de leche</h5>
-				<h4 style="color:orange; text-decoration:line-through;" class="row justify-content-center">$1.500</h4>
-				<p style="font-size:27px; color:red;" class="row justify-content-center">OFERTA $1.350</p>
-				<button type="button" id="producto4" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Rica leche para Gatitos de WHISKAS</p>
-			</div>
-			<!-- Fin Ofertas -->
+{{ mensaje }}
+<form action="{% url 'gatitocat' %}" method="post">
+	{% csrf_token %}
+		<div>	
+			<input type="hidden" name="txtId" class="from-control" value="{{ item.id }}">
+		</div>
 
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Comida10.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Felix Sobre</h5>
-				<h4 class="row justify-content-center">$750</h4>
-				<br><br>
-				<button type="button" id="producto5" class="btn btn-warning">Agregar al Carrito</button>
-				<p> Trocitos de pollo en salsa para Gatos, 156G
-				</p>
-			</div>
+		<div>	
+			<input type="hidden" name="txtNombre" class="from-control" value="{{ item.nombre }}">
+		</div>
+
+		<div>	
+			<input type="hidden" name="txtPrecio" class="from-control" value="{{ item.precioVenta }}">
+		</div>
+
+		<div>	
+			<input type="hidden" name="txtDescripcion" class="from-control" value="{{ item.descripcion }}">
+		</div>
 			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Comida11.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Felix Lata</h5>
-				<h4 class="row justify-content-center">$1.550</h4>
-				<br><br>
-				<button type="button" id="producto6" class="btn btn-warning">Agregar al Carrito</button>
-				<p> Alimento humedo sabor pavo en salsa purina Felix.
-				</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Comida1.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Cat chow Gatitos</h5>
-				<h4 class="row justify-content-center">$4.400</h4>
-				<br><br>
-				<button type="button" id="producto7" class="btn btn-warning">Agregar al Carrito</button>
-				<p>El nuevo PURINA CAT CHOW GATITOS DE 1 A 12 MESES,
-				ofrece los nutrientes que tu gatito necesita para un crecimiento sano 
-				</p>
-			</div>
+		<div>	
+			<button type="sumbit" name="btnListar" class="btn btn-light">
+					<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-bootstrap-reboot" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+		  <path fill-rule="evenodd" d="M1.161 8a6.84 6.84 0 1 0 6.842-6.84.58.58 0 0 1 0-1.16 8 8 0 1 1-6.556 3.412l-.663-.577a.58.58 0 0 1 .227-.997l2.52-.69a.58.58 0 0 1 .728.633l-.332 2.592a.58.58 0 0 1-.956.364l-.643-.56A6.812 6.812 0 0 0 1.16 8zm5.48-.079V5.277h1.57c.881 0 1.416.499 1.416 1.32 0 .84-.504 1.324-1.386 1.324h-1.6zm0 3.75V8.843h1.57l1.498 2.828h1.314L9.377 8.665c.897-.3 1.427-1.106 1.427-2.1 0-1.37-.943-2.246-2.456-2.246H5.5v7.352h1.141z"/>
+		</svg></button>
+		</div>
+</form>
+{% endblock %}
 
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Comida2.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">pro plan kitten</h5>
-				<h4 class="row justify-content-center">$30.000</h4>
-				<br><br>
-				<button type="button" id="producto8" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Es una tecnología exclusiva, formulada especialmente con una mezcla 
-				innovadora de nutrientes, 7.5KG
-				</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Comida3.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">equilibrio kitten</h5>
-				<h4 class="row justify-content-center">$9.900</h4>
-				<br><br>
-				<button type="button" id="producto9" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Gatitos Indoor es un alimento indicado hasta los 12 meses.</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Comida4.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">brit care crazy kitten</h5>
-				<h4 class="row justify-content-center">$13.900</h4>
-				<br><br>
-				<button type="button" id="producto10" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Fórmula hipoalergénica a base de pollo y arroz para gatitos. 
-				Alimento completo para gatos. 2 Kilos</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Comida5.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">nutrience original kitten</h5>
-				<h4 class="row justify-content-center">$10.900</h4>
-				<br><br>
-				<button type="button" id="producto11" class="btn btn-warning">Agregar al Carrito</button>
-				<p>El pollo de primera calidad como ingrediente principal de la fórmula de 
-				Nutrience Original Gatito saludable garantiza el óptimo crecimiento de su gatito.</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Comida6.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">orijen cat & kitten</h5>
-				<h4 class="row justify-content-center">$8.500</h4>
-				<br><br>
-				<button type="button" id="producto12" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Pollo y pavo de corral, pescado de captura silvestre y huevos del nido. </p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Comida7.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">nutrience subzero</h5>
-				<h4 class="row justify-content-center">$8.500</h4>
-				<br><br>
-				<button type="button" id="producto13" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Fraser Valley se prepara con fuentes de aves de corral frescas, nunca congeladas, 
-				pescado silvestre del Pacífico y pollo liofilizado</p>
-			</div>
-
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Comida8.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">orijen six fish cat</h5>
-				<h4 class="row justify-content-center">$20.500</h4>
-				<br><br>
-				<button type="button" id="producto14" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Biológicamente apropiado para todas las etapas de crecimiento. 
-				1.8KG</p>
-			</div>
-			
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Comida9.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Nutrince grain free</h5>
-				<h4 class="row justify-content-center">$26.500</h4>
-				<br><br>
-				<button type="button" id="producto15" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Para mascotas sensibles a proteínas de la tierra, huevos y carne de ave. 
-				2.5KG</p>
-			</div>
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/comida12.jpg" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Felix Party Mix</h5>
-				<h4 class="row justify-content-center">$1.200</h4>
-				<br><br>
-				<button type="button" id="producto16" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Sobrecito con una irresistible mezcla de colores y jugosos snacks. 
-				60g</p>
-			</div>
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Comida10.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Royal Canin Growth Kitten 36</h5>
-				<h4 class="row justify-content-center">$11.500</h4>
-				<br><br>
-				<button type="button" id="producto17" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Alimento completo y equilibrado para gatos - Especial para gatitos de segunda edad 2.5KG</p>
-			</div>
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Comida11.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Royal Canin Mother & Babycat 34</h5>
-				<h4 class="row justify-content-center">$12.800</h4>
-				<br><br>
-				<button type="button" id="producto18" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Alimento para gatitos en primera fase de crecimiento, desde el destete hasta los 4 meses y para las hembras gestantes o lactantes. 2.5KG</p>
-			</div>
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Comida12.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Brit Care Crazy Cat Kitten</h5>
-				<h4 class="row justify-content-center">$13.800</h4>
-				<br><br>
-				<button type="button" id="producto19" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Fórmula hipoalergénica a base de pollo y arroz para gatitos. Alimento completo para gatos. 2KG</p>
-			</div>
-			<div class="prod col-sm-8 col-md-4 col-lg-3 ">
-				<img src="acat/ComidaGatito/Comida12.png" width="200" height="200" alt="">
-				<h5 class="text-uppercase">Hills Kitten</h5>
-				<h4 class="row justify-content-center">$14.800</h4>
-				<br><br>
-				<button type="button" id="producto20" class="btn btn-warning">Agregar al Carrito</button>
-				<p>Alimento completo para gatos. 2KG</p>
-			</div>
-			<div class="overlay" id="overlay">
-				<div class="popup" id="popup">
-					<a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup"><i class="fas fa-times"></i></a>
-					<h3>Tu Articulo ha sido añadido al carrito correctamente.</h3>
-					<h4>El producto correspondiente al área "Comida de gatitos" ha sido agregado.</h4>
-					<form>
-						<div class="contenedor-inputs">			
-						</div>
-						<input type="submit" class="btn-submit" value="Seguir comprando">
-					</form>
-				</div>
+{% block listado %}
+{% for fila in lista %}
+<div class="prod">
+	<div class ="row justify-content-center">
+		<div>	
+			<div class="table-responsive">
+							<h4>{{ fila.nombre }}</h4>
+							<p>{{ fila.precioVenta }}</p>
+							<button id="producto1" class="btn btn-warning">Agregar al Carrito</button>
+							<p>{{ fila.descripcion }}</p>
+{% endfor %}
 			</div>
 		</div>
-		<br>
-</section>
+	</div>
+</div>
 {% endblock %}
