--- a/PetShop/gestorProducto/Templates/accesoriocat.html
+++ b/PetShop/gestorProducto/Templates/accesoriocat.html
@@ -25,6 +25,7 @@
 
 {% block listado %}
 {% for fila in lista %}
+{% if forloop.first %}<div class="row">{% endif %}
 <div class="prod">
 	<div class ="row justify-content-center">
 		<div>	
@@ -33,9 +34,12 @@
 							<p>{{ fila.precioVenta }}</p>
 							<button id="producto1" class="btn btn-warning">Agregar al Carrito</button>
 							<p>{{ fila.descripcion }}</p>
-{% endfor %}
 			</div>
 		</div>
 	</div>
 </div>
+	{% if forloop.counter|divisibleby:34 %}</div><div class="row">{% endif %}
+	{% if forloop.last %}</div>{% endif %}
+{% endfor %}
+
 {% endblock %}
