--- a/PetShop/gestorProducto/Templates/adopcion.html
+++ b/PetShop/gestorProducto/Templates/adopcion.html
@@ -9,6 +9,7 @@
 			Id
 		</div>
 		<div class="col-8 col-sm-4">	
+			<input type="text" name="txtId" class="from-control" value="{{ item.id }}" title="Ingrese solo números" pattern="[0-9]">
 			<input type="text" name="txtId" class="from-control" value="{{ item.id }}" title="Ingrese solo números" pattern="[1-900]">
 		</div>
 		<div class="col-1.5">	
@@ -56,20 +57,29 @@
 
 {% block listado %}
 {% for fila in lista %}
+{% if forloop.first %}<div class="row">{% endif %}
 <div class="galeria">
 	<div class="card">
-		<div class ="row justify-content-center">
+		<div class="">
 			<div>	
 				<div class="table-responsive">
 							<h3>{{ fila.nombre }}</h3>
 							<p>{{ fila.descripcion }}</p>
-							<p>{{ fila.activo }}</p>
+							<img src="{{ models.imagen.url }}">
 							<button type="button" id="adopta1" class="btn btn-warning">
 								<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 								  <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
 								</svg>
 							Adoptar</button> <!--a href="#"-->
 							<br>
-{% endfor %}
+
 			</div>
+		</div>
+	</div>
+	</div>
+	</div>	
+	{% if forloop.counter|divisibleby:12 %}</div><div class="row">{% endif %}
+	{% if forloop.last %}</div>{% endif %}
+{% endfor %}
+		
 {% endblock %}
