--- a/PetShop/gestorProducto/Templates/alimentogatito.html
+++ b/PetShop/gestorProducto/Templates/alimentogatito.html
@@ -33,9 +33,11 @@
 							<p>{{ fila.precioVenta }}</p>
 							<button id="producto1" class="btn btn-warning">Agregar al Carrito</button>
 							<p>{{ fila.descripcion }}</p>
-{% endfor %}
 			</div>
-		</div>
-	</div>
-</div>
+		</div>	
+	</div>	
+</div>								
+	{% if forloop.counter|divisibleby:34 %}</div><div class="row">{% endif %}
+	{% if forloop.last %}</div>{% endif %}
+{% endfor %}
 {% endblock %}
