Fotos en los productos OK

--- a/PetShop/gestorProducto/Templates/accesoriocat.html
+++ b/PetShop/gestorProducto/Templates/accesoriocat.html
@@ -1,7 +1,6 @@
 {% extends "index.html"%}
 
 {% block contenido%}
-{{ mensaje }}
 <form action="{% url 'accesocat' %}" method="post">
 	{% csrf_token %}
 		<div>	
@@ -30,6 +29,7 @@
 	<div class ="row justify-content-center">
 		<div>	
 			<div class="table-responsive">
+							<img src="{{ fila.imagen.url }}">
 							<h4>{{ fila.nombre }}</h4>
 							<p>{{ fila.precioVenta }}</p>
 							<button id="producto1" class="btn btn-warning">Agregar al Carrito</button>
