--- a/PetShop/gestorProducto/Templates/accesoriodog.html
+++ b/PetShop/gestorProducto/Templates/accesoriodog.html
@@ -29,6 +29,7 @@
 	<div class ="row justify-content-center">
 		<div>	
 			<div class="table-responsive">
+							<img src="{{ fila.imagen.url }}">
 							<h4>{{ fila.nombre }}</h4>
 							<p>{{ fila.precioVenta }}</p>
 							<button id="producto1" class="btn btn-warning">Agregar al Carrito</button>
