--- a/PetShop/gestorProducto/Templates/adopcion.html
+++ b/PetShop/gestorProducto/Templates/adopcion.html
@@ -1,57 +1,20 @@
 {% extends "index.html"%}
-
 {% block contenido%}
-{{ mensaje }}
-<form action="{% url 'adopta' %}" method="post">
-	{% csrf_token %}
-	<div class="row justify-content-center">
-		<div class="col-12 col-sm-2">
-			Id
+<form action="{% url 'adopta' %}" method="post" enctype="multipart/form-data">
+		{% csrf_token %}
+		<div>	
+			<input type="hidden" name="txtId" class="from-control" value="{{ item.id }}">
 		</div>
-		<div class="col-8 col-sm-4">	
-			<input type="text" name="txtId" class="from-control" value="{{ item.id }}" title="Ingrese solo números" pattern="[0-9]">
-			<input type="text" name="txtId" class="from-control" value="{{ item.id }}" title="Ingrese solo números" pattern="[1-900]">
+
+		<div>	
+			<input type="hidden" name="txtNombre" class="from-control" value="{{ item.nombre }}">
 		</div>
-		<div class="col-1.5">	
-			<button type="sumbit" name="btnBuscar" class="btn btn-danger btn-block" >Buscar</button>
+
+		<div>	
+			<input type="hidden" name="txtDescripcion" class="from-control" value="{{ item.descripcion }}">
 		</div>
-	</div>
-	<div class="row justify-content-center">
-		<div class="col-12 col-sm-2">
-			Nombre
-		</div>
-		<div class="col-12 col-sm-6">	
-			<input type="text" name="txtNombre" class="from-control" value="{{ item.nombre }}">
-		</div>
-	</div>
-	<div class="row justify-content-center">
-		<div class="col-12 col-sm-2">
-			Descripcion
-		</div>
-		<div class="col-12 col-sm-6">	
-			<input type="text" name="txtDescripcion" class="from-control" value="{{ item.descripcion }}">
-		</div>
-	</div>	
-	<div class="row justify-content-center">
-		<div class="col-12 col-sm-2">
-			Activo
-		</div>
-		<div class="col-12 col-sm-6">	
-			<input type="checkbox" name="chkActivo" value="1" "{% if item.activo %} checked {% endif %}">
-		</div>
-	</div>		
-	<div class="row justify-content-center">
-		<div class="col-12 col-sm-2">
-			Opciones
-		</div>
-		<div class="col-12 col-sm-6">	
-			<button type="sumbit" name="btnGrabar" class="btn btn-success" >Guardar</button>
-			<button type="sumbit" name="btnListar" class="btn btn-primary" >Listar</button>
-{% if item.id > 0 %}			
-			<button type="sumbit" name="btnEliminar" class="btn btn-danger float-right" >Eliminar</button>
-{% endif %}
-		</div>
-	</div>
+
+</form>
 </form>
 {% endblock %}
 
@@ -63,9 +26,9 @@
 		<div class="">
 			<div>	
 				<div class="table-responsive">
+							<img src="{{ fila.imagen.url }}">
 							<h3>{{ fila.nombre }}</h3>
 							<p>{{ fila.descripcion }}</p>
-							<img src="{{ models.imagen.url }}">
 							<button type="button" id="adopta1" class="btn btn-warning">
 								<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 								  <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
