--- a/PetShop/gestorProducto/Templates/adopcion.html
+++ b/PetShop/gestorProducto/Templates/adopcion.html
@@ -26,7 +26,7 @@
 		<div class="">
 			<div>	
 				<div class="table-responsive">
-							<img src="{{ fila.imagen.url }}">
+							<img id="foto" src="{{ fila.imagen.url }}">
 							<h3>{{ fila.nombre }}</h3>
 							<p>{{ fila.descripcion }}</p>
 							<button type="button" id="adopta1" class="btn btn-warning">
