--- a/PetShop/gestorProducto/Templates/accesoriocat.html
+++ b/PetShop/gestorProducto/Templates/accesoriocat.html
@@ -1,6 +1,10 @@
 {% extends "index.html"%}
+{% load static %}
+{% block contenido %}
+<head>
+	<link rel="stylesheet" href="{% static 'css/EstiloCompra.css' %}">
+</head>
 
-{% block contenido%}
 <form action="{% url 'accesocat' %}" method="post">
 	{% csrf_token %}
 		<div>	
@@ -25,15 +29,15 @@
 {% block listado %}
 {% for fila in lista %}
 {% if forloop.first %}<div class="row">{% endif %}
-<div class="prod">
-	<div class ="row justify-content-center">
-		<div>	
+<div class ="row justify-content-center" id="descripcion">
+	<div class="col-6">
+		<div class="prod">	
 			<div class="table-responsive">
-							<img src="{{ fila.imagen.url }}">
+							<img id="foto" src="{{ fila.imagen.url }}">
 							<h3 style="color:brown">{{ fila.nombre }}</h3>
 							<h4>${{ fila.precioVenta }}</h4>
 							<button id="producto" class="btn btn-warning">Agregar al Carrito</button>
-							<p>{{ fila.descripcion }}</p>
+							<p id="espacio">{{ fila.descripcion }}</p>
 			</div>
 		</div>
 	</div>
