--- a/PetShop/gestorProducto/Templates/buscar.html
+++ b/PetShop/gestorProducto/Templates/buscar.html
@@ -19,7 +19,7 @@
 							<h3 style="color:brown">{{ mostrar.nombre }}</h3>
 							<h4>${{ mostrar.precioVenta }}</h4>
 							<button id="producto" class="btn btn-warning">Agregar al Carrito</button>
-							<p>{{ mostrar.descripcion }}</p>
+							<p id="espacio">{{ mostrar.descripcion }}</p>
 			</div>	
 		</div>	
 	</div>	
@@ -38,7 +38,7 @@
 							<h3 style="color:brown">{{ mostrar.nombre }}</h3>
 							<h4>${{ mostrar.precioVenta }}</h4>
 							<button id="producto" class="btn btn-warning">Agregar al Carrito</button>
-							<p>{{ mostrar.descripcion }}</p>
+							<p id="espacio" >{{ mostrar.descripcion }}</p>
 			</div>	
 		</div>	
 	</div>	
