--- a/PetShop/gestorProducto/Templates/index.html
+++ b/PetShop/gestorProducto/Templates/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset = "utf-8">
 		<title>JoJu - PetShop</title>
+		<link rel="manifest" href="{% static 'manifest.json' %}">
 		{% load pwa %}
 		{% progressive_web_app_meta %}
 		
