--- a/PetShop/gestorProducto/Templates/index.html
+++ b/PetShop/gestorProducto/Templates/index.html
@@ -1,6 +1,7 @@
 {% load static %}
 <html>
 	<head>
+		<link rel="manifest" href="{% static 'manifest.json' %}">
 		<meta charset = "utf-8">
 		<title>JoJu - PetShop</title>
 		{% load pwa %}
@@ -23,7 +24,7 @@
 		<link rel="stylesheet" href="{% static 'js/script3.js' %}">
 		<link rel="stylesheet" href="{% static 'js/validaciones.js' %}">
 		<!-- Manifest -->
-		<link rel="manifest" href="/manifest.json">
+
 		
 	</head>
 	<body>
